# python-template

./: .pre-commit-config.yaml  README.md  Taskfile.yaml  cookiecutter.json  pyproject.toml
.github/workflows/: ci.yml
hooks/: post_gen_project.py  pre_prompt_project.py
tests/: conftest.py  test_template_creation.py
vanilla-template/{{ cookiecutter.repo_name }}/: .pre-commit-config.yaml  pyproject.toml
{{ cookiecutter.name }}/: .pre-commit-config.yaml  Taskfile.yaml  pyproject.toml
{{ cookiecutter.name }}/.github/workflows/: ci.yml
{{ cookiecutter.name }}/tests/: test_placeholder.py
