[project]
name = "{{ cookiecutter.name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cookiecutter>=2.6.0",
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
target-version = ['py312']
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests",
]
select = [
    "ANN001",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN205",
    "ANN206",
    "A",
    "F",
    "B",
    "E",
    "N",
    "S",
    "PT",
    "RSE",
    "T20",
    "DTZ",
    "COM",
    "ICN",
    "SIM",
    "PTH",
    "FIX",
    "ERA",
    "LOG",
    "C90",
    "ARG001",
    "ARG002",
    "I002",
    "D102",
    "D103",
    "D200",
    "D201",
    "D210",
    "D300",
    "D400",
    "D401",
    "D402",
    "D404",
    "D415",
    "D419",
    "RUF200",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.per-file-ignores]
"**/__init__.py"= ["F401"]
"**/tests/**"= ["S101"]

[tool.ruff.mccabe]
max-complexity = 10
